# DecenzaPocket

./: .gitignore  CLAUDE.md  CMakeLists.txt  PRIVACY.md  README.md
.github/workflows/: android-release.yml  ios-release.yml
android/: AndroidManifest.xml  AndroidManifest.xml.in  build.gradle
android/java/io/github/kulitorum/decenzapocket/: DecenzaApplication.java  DecenzaFcmService.java  PowerWidgetCommandService.java  PowerWidgetProvider.java
android/res/layout/: power_widget.xml
android/res/values/: bundled_libs.xml  libs.xml  strings.xml  styles.xml
android/res/xml/: power_widget_info.xml
android/src/io/github/kulitorum/decenzapocket/: KeepAliveService.java
docs/plans/: 2026-03-25-decenza-pocket-design.md  2026-03-25-decenza-pocket-implementation.md  2026-04-03-remote-control-design.md  2026-04-03-remote-control-implementation.md  2026-04-04-android-widget-design.md  2026-04-04-android-widget-implementation.md  2026-04-04-ios-widget-design.md  2026-04-04-ios-widget-implementation.md
ios/: DecenzaPocket.entitlements  Info.plist
ios/PowerWidget/: Info.plist  PowerWidget.swift  PowerWidgetBundle.swift  PowerWidgetExtension.entitlements  SharedState.swift  WebSocketCommand.swift  project.yml
ios/PowerWidget/Assets.xcassets/WidgetOff.imageset/: Contents.json
ios/PowerWidget/Assets.xcassets/WidgetOn.imageset/: Contents.json
qml/: BottomBar.qml  ConnectionIndicator.qml  Main.qml  PairingPage.qml  PowerButton.qml  RemoteControlPage.qml  SettingsPage.qml  StatusCard.qml  Theme.qml
resources/: resources.qrc
src/: main.cpp  version.h.in
src/core/: nativebridge.h  nativebridge_android.cpp  nativebridge_ios.mm  nativebridge_stub.cpp  notificationmanager.cpp  notificationmanager.h  settings.cpp  settings.h
src/network/: connectionmanager.cpp  connectionmanager.h  decenzaclient.cpp  decenzaclient.h  discovery.cpp  discovery.h  relayclient.cpp  relayclient.h  remotecontrolclient.cpp  remotecontrolclient.h
